--- a/frontend/loanshark/package.json
+++ b/frontend/loanshark/package.json
@@ -32,6 +32,8 @@
     "blk-design-system-react"
   ],
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.1",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.2.2",
@@ -53,7 +55,6 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.4",
-    
     "reactstrap": "8.7.1",
     "web-vitals": "1.0.1"
   },
