--- a/backend/loanshark/requirements.txt
+++ b/backend/loanshark/requirements.txt
@@ -1,14 +1,19 @@
 asgiref==3.3.4
+certifi==2021.5.30
+chardet==4.0.0
 Django==3.2.4
 django-cors-headers==3.7.0
 django-filter==2.4.0
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.6.0
+idna==2.10
 Markdown==3.3.4
 Pillow==8.2.0
 PyJWT==1.7.1
 pytz==2021.1
+requests==2.25.1
 six==1.16.0
 sqlparse==0.4.1
 stripe==2.55.1
+urllib3==1.26.6
